fixed white space appearing at bottom of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,18 @@
+html{
+  margin:0;
+  padding:0;
+  max-height:100vh;
+  overflow:hidden;
+}
+
+
 body {
   background: linear-gradient(0deg, rgb(0, 45, 87) 0%, white 63%);
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  display: block;
+
+  height: 100%;
+  
 }
 
 .hide {
